Recreate intellij project with Spark support